<resources>
    <string name="app_name">HealthMonitor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Summary</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_advices">Advices</string>
    <string name="title_settings">Settings</string>
    <string name="text_advice_title">Advices for You</string>
    <string name="text_covid_title">COVID19 Cases</string>
    <string name="text_getting_data">Getting data...</string>
    <string name="text_advice_etc">Advice..</string>
    <string name="text_more_info">More Info</string>
    <string name="text_exercises_title">Exercise Index</string>
    <string name="text_tips_title">Tips</string>
    <string name="text_end">No more...</string>
    <string name="login_title">Welcome</string>
    <string name="covid_more_title">COVID-19 Info</string>
    <string name="covid_more_location">Location</string>
    <string name="covid_more_increase">Newly Confirmed</string>
    <string name="covid_more_hospitalized">Hospitalized</string>
    <string name="covid_more_death">Death</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
