<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/text_advice_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_advice_title"
        android:textSize="40sp"/>

    <ScrollView
        android:id="@+id/scrollView_widgets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_advice_title"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:id="@+id/layout_widgets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/widget_covid_cases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_advice_widget"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:id="@+id/text_covid_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_covid_title"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/text_covid_cases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_covid_title"
                    android:text="@string/text_getting_data"
                    android:textSize="40sp"
                    android:gravity="end"/>
                <TextView
                    android:id="@+id/text_covid_advice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_covid_cases"
                    android:layout_marginTop="5dp"
                    android:text="@string/text_advice_etc"
                    android:textSize="16sp"
                    android:gravity="start"/>
                <Button
                    android:id="@+id/btn_covid_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_covid_advice"
                    android:text="@string/text_more_info"
                    android:layout_marginTop="10dp"

                    android:layout_marginLeft="200dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/widget_exercises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/widget_covid_cases"
                android:background="@drawable/shape_advice_widget"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:id="@+id/text_exercises_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_exercises_title"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/text_exercises"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_exercises_title"
                    android:text="@string/text_advice_etc"
                    android:textSize="16sp"
                    android:gravity="start"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_exercises"
                    android:text="@string/text_more_info"
                    android:layout_marginTop="10dp"

                    android:layout_marginLeft="200dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/widget_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/widget_exercises"
                android:background="@drawable/shape_advice_widget"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:id="@+id/text_tips_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tips_title"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/text_tips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_tips_title"
                    android:text="@string/text_advice_etc"
                    android:textSize="16sp"
                    android:gravity="start"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_end"
                android:layout_below="@id/widget_tips"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:gravity="center"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>