<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CovidMore"
    android:padding="20dp">

    <TextView
        android:id="@+id/text_covid_more_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/covid_more_title"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/text_covid_more_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/covid_more_location"
        android:textSize="20sp"
        android:layout_below="@id/text_covid_more_title"/>

    <ScrollView
        android:id="@+id/scrollView_widgets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_covid_more_location"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:id="@+id/layout_widgets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/widget_more_covid_cases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_advice_widget"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:id="@+id/text_more_covid_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_covid_title"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/text_covid_more_cases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_more_covid_title"
                    android:text="@string/text_getting_data"
                    android:textSize="40sp"
                    android:gravity="end"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/widget_more_covid_hospitailzed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_advice_widget"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@id/widget_more_covid_increase">
                <TextView
                    android:id="@+id/text_covid_hospitalized_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/covid_more_hospitalized"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/text_covid_more_hiospitalized"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_covid_hospitalized_title"
                    android:text="@string/text_getting_data"
                    android:textSize="40sp"
                    android:gravity="end"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/widget_more_covid_death"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_advice_widget"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@id/widget_more_covid_hospitailzed">
                <TextView
                    android:id="@+id/text_covid_death_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/covid_more_death"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/text_covid_death"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_covid_death_title"
                    android:text="@string/text_getting_data"
                    android:textSize="40sp"
                    android:gravity="end"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/widget_more_covid_increase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_advice_widget"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@id/widget_more_covid_cases">
                <TextView
                    android:id="@+id/text_covid_increase_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/covid_more_increase"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/text_covid_more_increase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_covid_increase_title"
                    android:text="@string/text_getting_data"
                    android:textSize="40sp"
                    android:gravity="end"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>